<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Dibuja">

    <Button
        android:id="@+id/buttonDibuixa"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/colorSecundary"
        android:fontFamily="@font/mm"
        android:text="@string/next"
        android:textColor="#FFF"
        android:textSize="24sp"
        android:background="@drawable/bgwhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbardraw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#89ACC8"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:fontFamily="@font/mm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_drag_handle_24" />

    <TextView
        android:id="@+id/draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/draw"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/mm"
        android:textColor="#779BBC"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbardraw" />

    <TextView
        android:id="@+id/discoverDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/draw_description"
        android:fontFamily="@font/ml"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/draw" />

    <ImageView
        android:id="@+id/openCamera"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="107dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discoverDescription"
        app:srcCompat="@drawable/draw_cam" />

</androidx.constraintlayout.widget.ConstraintLayout>
