<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:layout_alignParentBottom="true"
    tools:context=".ui.Associa_activity.Asocia">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbardescubre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorSecundary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:fontFamily="@font/mm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_drag_handle_24" />

    <TextView
        android:id="@+id/associates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="ASSOCIA"
        android:textColor="#779BBC"
        android:textSize="30sp"
        android:fontFamily="@font/mm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbardescubre" />

    <TextView
        android:id="@+id/associates_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/ml"
        android:text="@string/instruction_assosiates"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/associates" />

    <ListView
        android:id="@+id/associates_list"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/textview_border"
        android:fontFamily="@font/mm"
        android:minHeight="100dp"
        android:maxHeight="200dp"
        android:padding="10dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/associates_description" />

    <EditText
        android:id="@+id/associates_song"
        android:layout_width="372dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/mm"
        android:hint="@string/textHint"
        android:imeOptions="actionSend"
        android:inputType="textCapSentences|textAutoCorrect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/associates_list" />

    <Button
        android:id="@+id/buttonAddToList"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="178dp"
        android:backgroundTint="@color/colorSecundary"
        android:fontFamily="@font/mm"
        android:text="@string/addtolist"
        android:textColor="#FFF"
        android:textSize="24sp"
        android:background="@drawable/bgwhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/associates_song" />

    <Button
        android:id="@+id/buttonAsocia"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/colorSecundary"
        android:fontFamily="@font/mm"
        android:text="@string/next"
        android:textColor="#FFF"
        android:textSize="24sp"
        android:background="@drawable/bgwhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>